<resources>
    <string name="app_name">CefaleApp</string>
    <string name="esei_name">Escuela Superior de Ingeniería Informática. Universidad de Vigo</string>
    <string name="neurologia_name">Servicio de Neurología. Complejo Hospitalario Universitario de Ourense</string>
    <string name="esei_name_short">Escuela Superior de Ingeniería Informática. UVigo.</string>
    <string name="neurologia_name_short">Servicio de Neurolgía. CHUO.</string>
    <string name="lbl_next">next</string>
    <string name="lbl_menu">menú</string>
    <string name="lbl_settings">Ajustes</string>
    <string name="lbl_actions">Acciones</string>
    <string name="lbl_enquiry">Cuestionario</string>
    <string name="lbl_details">Detalles</string>
    <string name="lbl_treatment">Tratamiento</string>
    <string name="lbl_about">Acerca de...</string>
    <string name="lbl_faq">Preguntas frecuentes</string>
    <string name="lbl_info">Información</string>
    <string name="lbl_test_hit">Test HIT</string>
    <string name="lbl_test_midas">Test MIDAS</string>
    <string name="lbl_text_size">Tamaño del texto</string>
    <string name="lbl_show_questions">Mostrar ciertas preguntas</string>
    <string name="lbl_question">Pregunta</string>
    <string name="lbl_text_settings">Ajustes del texto</string>
    <string name="lbl_question_settings">Ajustes de las preguntas</string>
    <string name="lbl_enquiry_settings">Ajustes del cuestionario</string>
    <string name="lbl_text_small">Texto pequeño</string>
    <string name="lbl_text_medium">Texto mediano</string>
    <string name="lbl_text_large">Texto grande</string>
    <string name="lbl_morbidity">Morbidity</string>
    <string name="lbl_show_notes_question">Pregunta sobre notas del paciente</string>
    <string name="lbl_vademecum">Vademécum</string>
    <string name="lbl_medicine">Medicamento</string>
    <string name="lbl_medicine_group">Grupo de medicamentos</string>
    <string name="lbl_minimum_dosage">Dosis mínima</string>
    <string name="lbl_maximum_dosage">Dosis máxima</string>
    <string name="lbl_recommended_dosage">Dosis recomendada</string>
    <string name="lbl_adverse_effects">Efectos adversos</string>
    <string name="lbl_pills">grajea(s)/unidade(s)</string>
    <string name="lbl_compatible_medicines">Medicinas compatibles</string>
    <string name="lbl_incompatible_medicines">Medicinas incompatibles</string>
    <string name="lbl_preventive_treatment">Tratamiento preventivo</string>
    <string name="lbl_symptomatic_treatment">Tratamiento sintomático</string>
    <string name="msg_info">Información sobre la aplicación.</string>
    <string name="msg_faq">Preguntas frecuentes sobre la migraña.</string>
    <string name="msg_treatment">Funcionalidad dedicada al facultativo.
        Asistencia al tratamiento. Tomando los datos del anterior cuestionario,
        o partiendo desde cero, se sugiere el tratamiento indicado según
        las comorbilidades aportadas.
    </string>
    <string name="msg_test_migraine">Cuestionario principal: migraña.
    Una serie de preguntas entran en detalle en los síntomas del paciente para
    aportar, igualmente de forma detallada, un diagnóstico en cuanto al padecimiento
    de migrañas.</string>
    <string name="msg_vademecum">Funcionalidad dedicada la facultativo.
        Se trata de una infomración resumida de cada principio activo
        para el tratamiento de migrañas, preventivo o sintomático.</string>
    <string name="msg_test_hit">Test HIT. Este test realiza una serie reducida de preguntas
        al paciente para determinar el impacto de las migrañas en su vida.</string>
    <string name="msg_test_midas">Test MIDAS. Este test realiza una serie reducida de preguntas
        al paciente para determinar un el grado de discapacidad provocado por las migrañas.</string>
    <string name="msg_no_option_chosen">No option selected</string>
    <string name="msg_app_target">Aplicación para el diagnóstico diferencial de cefaleas migrañosas y tensionales.</string>
    <string name="msg_app_physician_mode">La app pasa ahora a estar en modo de soporte para facultativos, de modo
                                     que está disponible funcionalidad relacionada con la asistencia al tratamiento
                                     de migrañas mediante medicamentos. Recuerde que solo un médico está en condiciones
                                     de comprender y aplicar correctamente estas recomendaciones.
                                     La toma de medicamentos sin supervisión médica es peligrosa para la salud.
                                      </string>
    <string-array name="txt_faq_qs">
        <item>@string/txt_faq1_q</item>
        <item>@string/txt_faq2_q</item>
        <item>@string/txt_faq3_q</item>
        <item>@string/txt_faq4_q</item>
        <item>@string/txt_faq5_q</item>
        <item>@string/txt_faq6_q</item>
        <item>@string/txt_faq7_q</item>
        <item>@string/txt_faq8_q</item>
        <item>@string/txt_faq9_q</item>
        <item>@string/txt_faq10_q</item>
        <item>@string/txt_faq11_q</item>
        <item>@string/txt_faq12_q</item>
        <item>@string/txt_faq13_q</item>
        <item>@string/txt_faq14_q</item>
        <item>@string/txt_faq15_q</item>
        <item>@string/txt_faq16_q</item>
        <item>@string/txt_faq17_q</item>
        <item>@string/txt_faq18_q</item>
        <item>@string/txt_faq19_q</item>
        <item>@string/txt_faq20_q</item>
        <item>@string/txt_faq21_q</item>
        <item>@string/txt_faq22_q</item>
        <item>@string/txt_faq23_q</item>
        <item>@string/txt_faq24_q</item>
        <item>@string/txt_faq25_q</item>
    </string-array>
    <string-array name="txt_faq_as">
        <item>@string/txt_faq1_a</item>
        <item>@string/txt_faq2_a</item>
        <item>@string/txt_faq3_a</item>
        <item>@string/txt_faq4_a</item>
        <item>@string/txt_faq5_a</item>
        <item>@string/txt_faq6_a</item>
        <item>@string/txt_faq7_a</item>
        <item>@string/txt_faq8_a</item>
        <item>@string/txt_faq9_a</item>
        <item>@string/txt_faq10_a</item>
        <item>@string/txt_faq11_a</item>
        <item>@string/txt_faq12_a</item>
        <item>@string/txt_faq13_a</item>
        <item>@string/txt_faq14_a</item>
        <item>@string/txt_faq15_a</item>
        <item>@string/txt_faq16_a</item>
        <item>@string/txt_faq17_a</item>
        <item>@string/txt_faq18_a</item>
        <item>@string/txt_faq19_a</item>
        <item>@string/txt_faq20_a</item>
        <item>@string/txt_faq21_a</item>
        <item>@string/txt_faq22_a</item>
        <item>@string/txt_faq23_a</item>
        <item>@string/txt_faq24_a</item>
        <item>@string/txt_faq25_a</item>
    </string-array>
    <string name="txt_faq1_q">¿Cefalea y migraña es lo mismo?</string>
    <string name="txt_faq1_a">Cefalea significa simplemente dolor de cabeza. La migraña es un tipo de cefalea. Hay muchos tipos de cefaleas, pero las más conocidas son la migraña, la cefalea tensional y la cefalea en racimos o cefalea de Horton. Todas las cefaleas tienen unos criterios clínicos para su diagnóstico, que se basan fundamentalmente en la intensidad del dolor, en su localización, en su duración, y otros síntomas o características acompañantes.</string>
    <string name="txt_faq2_q">¿Las cefaleas se relacionan con el sexo de la persona?</string>
    <string name="txt_faq2_a">La prevalencia de las cefaleas varia con el sexo. La migraña es tres veces más frecuente en las mujeres que en los hombres, en la población general, y esta prevalencia aumenta entre las personas que consultan en Neurología donde el 80% son mujeres. Las pacientes con migraña pueden tener crisis en el periodo menstrual, suelen empeorar con la toma de anticonceptivos hormonales, y suelen mejorar sus migrañas con la menopausia. En los hombres, la cefalea en racimos es tres veces más frecuente que en las mujeres.</string>
    <string name="txt_faq3_q">¿Las migrañas se heredan?</string>
    <string name="txt_faq3_a">No hay un gen que transmita la migraña, pero si hay una predisposición genética familiar en al menos el 60% de los pacientes afectados. En ocasiones los pacientes comentan que sus padres no padecen de migraña, pero si la padecía algunos de los abuelos, o de los tíos o de los primos. Hay una migraña especial, la llamada migraña hemipléjica familiar, que se caracteriza por acompañarse de una clínica motora en forma de hemiplejía transitoria y que está genéticamente determinada a través de mutaciones en el gen CACNA1A en el cromosoma 19.</string>
    <string name="txt_faq4_q">¿Es lo mismo jaqueca que migraña?</string>
    <string name="txt_faq4_a">Jaqueca es la forma popular en que se conoce a la migraña. Otras veces se le conoce como hemicránea, y que indica que es un dolor que afecta a una mitad del cráneo y que es la localización más típica del dolor de la migraña.</string>
    <string name="txt_faq5_q">¿Qué es una migraña?</string>
    <string name="txt_faq5_a">La migraña es un tipo de cefalea. Se diagnostica por criterios clínicos. Sus principales características son la de un dolor de horas de duración, de intensidad moderada-severa, con una cualidad pulsátil y un predominio hemicraneal, es frecuente la presencia de intolerancia a la luz y al ruido, y puede presentar náuseas y/o vómitos. Otra característica es el agravamiento con la actividad física.</string>
    <string name="txt_faq6_q">¿Qué es un aura de migraña?</string>
    <string name="txt_faq6_a">El aura es un síntoma neurológico que precede al inicio del dolor de la migraña. Suele durar entre 5 a 60 minutos. Las auras de la migraña pueden ser visuales (lucecitas, líneas en zig-zag, un espectro de fortificación, una zona oscura en el campo visual -llamada escotoma-), sensitivas (sensación de hormigueos en la mano y alrededor de la boca), del lenguaje (dificultad para expresarse), y motoras (pérdida de fuerza en un lado del cuerpo).</string>
    <string name="txt_faq7_q">¿Qué son los pródromos de la migraña?</string>
    <string name="txt_faq7_a">Los síntomas prodrómicos son aquellos que predicen que puede ocurrir una enfermedad. En el caso de la migraña los pacientes suelen referir en las 24 horas previas a una crisis, cambios en el humor con irritabilidad, falta de concentración, cansancio, bostezos, fotosensibilidad y cambios en el apetito con apetencia por los dulces.</string>
    <string name="txt_faq8_q">¿Qué es una migraña de alta frecuencia y una migraña crónica?</string>
    <string name="txt_faq8_a">Una migraña de alta frecuencia es aquella en la que los días de cefalea se sitúan entre 8 y 14 días al mes, durante al menos 3 meses consecutivos. Y la migraña crónica implica tener más de 15 días de cefalea al mes durante al menos 3 meses consecutivos. Por tanto, es muy importante que los pacientes se acostumbren a llevar un calendario de migraña donde anotará los días de cefalea, su intensidad y los analgésicos consumidos. El tratamiento precoz de la migraña es la mejor medida para evitar la cronificación de la migraña.</string>
    <string name="txt_faq9_q">¿Cuándo está indicado realizar una prueba de imagen en la migraña?</string>
    <string name="txt_faq9_a">La migraña es un diagnóstico clínico. Se realiza con una historia clínica detallada identificando las características del dolor y realizando un diagnóstico diferencial con otros tipos de cefaleas tanto primarias como secundarias. En una migraña la exploración neurológica tiene que ser normal. Por tanto, el neurólogo solicitará una prueba en caso de no cumplir estrictamente los criterios diagnósticos o por presentar anomalías en la exploración neurológica, o la respuesta al tratamiento no es la esperable. Sin embargo, una resonancia magnética cerebral se indicará en el caso de una cefalea en racimos o cefalea de Horton y en las neuralgias del trigémino para identificar una causa orgánica responsable de la cefalea.</string>
</resources>