<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="@string/lbl_settings"
          android:icon="@drawable/settings"
          android:enabled="false"
          app:showAsAction="never"/>
        <group android:id="@+id/nav_grp1">
            <item
                android:id="@+id/op_text_settings"
                android:title="@string/lbl_text_settings"
                android:icon="@drawable/text_size"
                app:showAsAction="never" />
            <item
                android:id="@+id/op_enquiry_settings"
                android:title="@string/lbl_enquiry_settings"
                android:icon="@drawable/question"
                app:showAsAction="never" />
        </group>
    <item android:title="@string/lbl_actions"
          android:icon="@drawable/medical"
          android:enabled="false"
          app:showAsAction="never" />

        <group android:id="@+id/nav_grp2">
            <item
                android:id="@+id/op_start_enquiry"
                android:title="@string/lbl_enquiry"
                android:icon="@drawable/test"
                app:showAsAction="never" />

            <item
                android:id="@+id/op_start_treatment"
                android:title="@string/lbl_treatment"
                android:icon="@drawable/medicine"
                app:showAsAction="never" />
        </group>
</menu>
