<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup android:id="@+id/rgTextSizeOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton    android:id="@+id/btTextSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_text_small"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioButton    android:id="@+id/btTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_text_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
            <RadioButton    android:id="@+id/btTextLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_text_large"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>
