<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center|center_vertical|center_horizontal"
    tools:context=".ui.MainActivity2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="5dp"
                app:tint="?attr/colorSecondary"
                android:contentDescription="@string/lbl_treatment"
                android:tooltipText="@string/lbl_treatment"
                app:srcCompat="@drawable/medical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_treatment"
                android:textColor="?attr/colorSecondary"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        </LinearLayout>

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="5dp"
            app:tint="?attr/colorSecondary"
            android:contentDescription="@string/lbl_enquiry"
            android:tooltipText="@string/lbl_enquiry"
            app:srcCompat="@drawable/test"/>

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="5dp"
            app:tint="?attr/colorSecondary"
            android:contentDescription="@string/lbl_vademecum"
            android:tooltipText="@string/lbl_vademecum"
            app:srcCompat="@drawable/medicine"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </LinearLayout>

</LinearLayout>
