<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center|center_vertical|center_horizontal"
    tools:context=".ui.AboutActivity">

    <LinearLayout
        android:id="@+id/lyMain"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView      android:id="@+id/btAbout"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="5dp"
                app:tint="?attr/colorSecondary"
                android:contentDescription="@string/lbl_about"
                android:tooltipText="@string/lbl_about"
                app:srcCompat="@drawable/info"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_about"
                android:textColor="?attr/colorSecondary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView          android:id="@+id/btInfo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="5dp"
                app:tint="?attr/colorSecondary"
                android:contentDescription="@string/lbl_info"
                android:tooltipText="@string/lbl_info"
                app:srcCompat="@drawable/question"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_info"
                android:textColor="?attr/colorSecondary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView          android:id="@+id/btLinks"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="5dp"
                app:tint="?attr/colorSecondary"
                android:contentDescription="@string/lbl_links"
                android:tooltipText="@string/lbl_links"
                app:srcCompat="@drawable/ic_internet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_links"
                android:textColor="?attr/colorSecondary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical">

        <LinearLayout           android:id="@+id/lyTreatment"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView          android:id="@+id/btTreatment"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="5dp"
                app:tint="?attr/colorSecondary"
                android:contentDescription="@string/lbl_treatment"
                android:tooltipText="@string/lbl_treatment"
                app:srcCompat="@drawable/medical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_treatment"
                android:textColor="?attr/colorSecondary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>

        <LinearLayout           android:id="@+id/lyVademecum"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView          android:id="@+id/btVademecum"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="5dp"
                app:tint="?attr/colorSecondary"
                android:contentDescription="@string/lbl_vademecum"
                android:tooltipText="@string/lbl_vademecum"
                app:srcCompat="@drawable/medicine"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_vademecum"
                android:textColor="?attr/colorSecondary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView          android:id="@+id/btHIT"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="5dp"
                app:tint="?attr/colorSecondary"
                android:contentDescription="@string/lbl_test_hit"
                android:tooltipText="@string/lbl_test_hit"
                app:srcCompat="@drawable/test_hit"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_test_hit"
                android:textColor="?attr/colorSecondary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView          android:id="@+id/btTestMigraine"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="5dp"
                app:tint="?attr/colorSecondary"
                android:contentDescription="@string/lbl_test_migraine"
                android:tooltipText="@string/lbl_test_migraine"
                app:srcCompat="@drawable/test_migraine"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_test_migraine"
                android:textColor="?attr/colorSecondary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView          android:id="@+id/btMIDAS"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="5dp"
                app:tint="?attr/colorSecondary"
                android:contentDescription="@string/lbl_test_midas"
                android:tooltipText="@string/lbl_test_midas"
                app:srcCompat="@drawable/test_midas"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_test_midas"
                android:textColor="?attr/colorSecondary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
    </LinearLayout>

    <TextView       android:id="@+id/tvErrorStatus"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        android:background="#ff0000"/>
</LinearLayout>
